[project]
name = "flashlight"
version = "0.1.0"
description = "This tool is for responding to CSAM on dark net and generate hashes of CSAM files and links which can be used to prevent sharing."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "bs4>=0.0.2",
    "html5lib>=1.1",
    "requests[socks]>=2.32.5",
]
