[project]
name = "flashlight"
version = "0.1.0"
description = "This tool is for responding to CSAM on dark net and generate hashes of CSAM files and links which can be used to prevent sharing."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "bs4>=0.0.2",
    "colorama>=0.4.6",
    "html5lib>=1.1",
    "numpy<2",
    "pillow>=12.0.0",
    "requests[socks]>=2.32.5",
    "torch<2.3.0",
    "transformers>=4.57.1",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.5",
    "sphinx<7",
    "sphinx-rtd-theme>=0.5.1",
]
